# recipientfilter

./: .gitignore  README.md
mailgen/: Cargo.toml
mailgen/src/: main.rs
recipient_filter/: Cargo.toml  example_communication.txt  recipient_filter.default.toml  recipient_filter.service
recipient_filter/src/: main.rs
