[package]
name = "recipient_filter"
version = "0.1.0"
authors = ["Grollicus"]
edition = "2018"

[dependencies]
hmac = "0.7.0"
lazy_static = "1.3.0"
nix = "0.14.0"
regex = "1.1.6"
scoped-pool = "1.0.0"
serde = {version="1.0.91", features=["derive"]}
sha2 = "0.8.0"
toml = "0.5"
users = "0.9.1"
postfix_policy = { path = "../postfix_policy" }
